# benchmarks

./: .gitignore  Cargo.toml  Kraftfile  Makefile  README.md
config/density_eval/: eval_config_complete.json  eval_config_test.json  firecracker_config.json  hyperlight_config.json  process_config.json  unikraft_config.json
config/firecracker/: vm_config.json  vm_config_template.json
config/latency_eval/: config.json  eval_config.json  firecracker_config.json  firecracker_snapshot_config.json  hyperlight_config.json  process_config.json  unikraft_config.json
config/unikraft/: Kraftfile
firecracker/: create_rootfs.sh  vm_config.json
firecracker/eval/: Cargo.toml
firecracker/eval/src/: args.rs  main.rs
firecracker/guest_scripts/: configure_rootfs_in_container.sh  configure_vm_ip.sh  rust-http-echo  start_rust_http_echo.sh
firecracker/rust-http-server/: Cargo.toml
firecracker/src/: args.rs  http.rs  main.rs
hyperlight/: Cargo.toml  Makefile
hyperlight/src/guest/: Cargo.toml
hyperlight/src/host/: Cargo.toml
hyperlight/src/host/src/: http.rs  sandbox.rs
scripts/: generate_base_configs.py  setup.sh  setup_network.sh
scripts/firecracker/: clean_network.sh  create_rootfs.sh  create_snapshot.sh  setup_network.sh  start_snapshot.sh
scripts/firecracker/guest_scripts/: configure-network  configure_rootfs_in_container.sh
scripts/plot/: cold_start_latency.csv  density.csv  final_cold_start_latency.csv  plot_cold_latency.py  plot_density.py  requirements.txt
src/client/: Cargo.toml
src/client/src/: args.rs  main.rs
src/eval/client/: Cargo.toml
src/eval/client/src/: main.rs
src/eval/client_lib/: Cargo.toml
src/eval/client_lib/src/: lib.rs
src/eval/density/: Cargo.toml
src/eval/density/src/: args.rs  main.rs
src/eval/latency/: Cargo.toml
src/eval/latency/src/: args.rs  firecracker.rs  firecracker_snapshot.rs  hyperlight.rs  main.rs  net_lib.rs  process.rs  unikraft.rs
src/eval/sandbox_lib/: Cargo.toml
src/eval/sandbox_lib/src/: firecracker.rs  firecracker_snapshot.rs  hyperlight.rs  lib.rs  net_lib.rs  process.rs  sandbox.rs  unikraft.rs
src/guest/src/: main.rs
src/host/: Cargo.toml
src/host/src/: args.rs  main.rs
src/http-library/: Cargo.toml
src/http-library/src/: lib.rs
src/hyperlight/guest/: Cargo.toml
src/hyperlight/guest/src/: main.rs
src/hyperlight/host/: Cargo.toml
src/hyperlight/host/src/: args.rs  http.rs  logging.rs  main.rs  sandbox.rs
src/rust-http-echo/: Cargo.toml
src/rust-http-echo/src/: main.rs
src/unikraft/: Cargo.toml
src/unikraft/src/: main.rs
unikraft/: Cargo.toml  Kraftfile  README.md
unikraft/src/: main.rs
