# Copyright(c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
members = [
    "src/eval/client", 
    "src/hyperlight/guest", 
    "src/hyperlight/host", 
    "src/rust-http-echo",
    "src/eval/latency",
    ]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
flexi_logger = "0.29.6"
log = "0.4.22"
serde_json = { version = "1.0.134", default-features = false }
serde = { version = "1.0.217", default-features = false }
hyper = { version = "1.5.2", default-features = false }
tokio = { version = "1.42.0", default-features = false }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", default-features = false }

hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight/", package = "hyperlight-guest" }
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight/", default-features = false, features = [
    "kvm",
], package = "hyperlight-host" }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight/", default-features = false, package = "hyperlight-common" }
