# Copyright(c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
authors = ["Microsoft Corporation"]
name = "rust-http-echo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
flexi_logger = "0.29.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["std", "derive"] }
serde_json = { version = "1.0.134", features = ["std"] }
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }