# Copyright(c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
authors = ["Microsoft Corporation"]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
client_lib = { path = "../client_lib" }
anyhow = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }

hyperlight-host = { workspace = true }
hyperlight-common = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["full"] }
