# Copyright(c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "sandbox_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
client_lib = { path = "../client_lib" }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["v4"]}